trybuild/fail/field_does_not_impl_arbitrary.stderr
error[E0277]: the trait bound `DoesNotImplArbitrary: Arbitrary` is not satisfied
 --> trybuild/fail/field_does_not_impl_arbitrary.rs:6:17
  |
6 | #[derive(Clone, Arbitrary)]
  |                 ^^^^^^^^^ the trait `Arbitrary` is not implemented for `DoesNotImplArbitrary`
  |
  = help: the following other types implement trait `Arbitrary`:
            ()
            (A, B)
            (A, B, C)
            (A, B, C, D)
            (A, B, C, D, E)
            (A, B, C, D, E, F)
            (A, B, C, D, E, F, G)
            (A, B, C, D, E, F, G, H)
          and $N others
  = note: this error originates in the derive macro `Arbitrary` (in Nightly builds, run with -Z macro-backtrace for more info)
